<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/heading_login"
        android:textSize="30dp"
        android:textColor="@color/colorPrimary"/>

    <EditText
        android:id="@+id/edt_login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_login_username"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/edt_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_login_password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_login"
        android:background="@color/colorAccent"
        android:textColor="@color/colorWhite"
        android:layout_marginHorizontal="4dp"/>

    <Button
        android:id="@+id/btn_login_clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_clear"
        />

    <Button
        android:id="@+id/btn_login_signUp"
        android:text="@string/button_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:padding="8dp"/>

</LinearLayout>