<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
    <TextView
        android:id="@+id/txt_showUser_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/heading_showUser"
        android:textSize="30dp"
        android:textColor="@color/colorPrimary"/>

    <RelativeLayout
        android:id="@+id/RL_userAccountContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_showUser_heading"
        android:padding="4dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt_showUser_usernameHeading2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heading2_userName"/>
            <TextView
                android:id="@+id/txt_showUser_usernameContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/txt_showUser_usernameHeading2"
                android:paddingHorizontal="8dp"/>
        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RL_welcomeContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/RL_userAccountContent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message_showUser_welcome"
            android:textSize="40dp"
            android:textAlignment="center"
            android:layout_centerVertical="true"/>
        <Button
            android:id="@+id/btn_showUser_signOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_signOut"/>
    </RelativeLayout>

</RelativeLayout>